--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -10,13 +10,13 @@
           <a class="nav-link" routerLink="notificaciones">Notificaciones</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Incidencias</a>
+          <a class="nav-link" routerLink="incidencias">Incidencias</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pruebas de vida</a>
+          <a class="nav-link" routerLink="pruebasDeVida">Pruebas de vida</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Administrar</a>
+          <a class="nav-link" routerLink="administracion">Administrar</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
