--- a/src/app/restricciones/restricciones.component.html
+++ b/src/app/restricciones/restricciones.component.html
@@ -1,16 +1,21 @@
-<div class="lista-restricciones">
-    <table class="table table-hover">
-        <thead>
-            <tr>
-                <th scope="col">Agresor</th>
-                <th scope="col">Víctima</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr class="table-active">
-                <td>Agresor 1</td>
-                <td>Víctima 1</td>
-            </tr>
-        </tbody>
-    </table>
+<div class="general">
+    <div class="lista-restricciones">
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th scope="col">Agresor</th>
+                    <th scope="col">Víctima</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="table-active">
+                    <td>Agresor 1</td>
+                    <td>Víctima 1</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="map">
+        <p>Mapa con ubicaciones</p>
+    </div>
 </div>
