--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -7,10 +7,11 @@
                     <div class="form-group">
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
                             placeholder="Email">
-                        <small id="emailHelp" class="form-text text-muted">Ingrese su email de la empresa</small>
+                        <small id="emailHelp" class="form-text text-muted">Ingrese su email</small>
                     </div>
                     <div class="form-group">
                         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                        <small id="forgotPassword" class="form-text text-muted">Olvidé mi contraseña</small>
                     </div>
                     <div class="form-group">
                         <button type="submit" class="btn btn-primary" routerLink="/inicio">Submit</button>
