--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -14,7 +14,7 @@
                         <small id="forgotPassword" class="form-text text-muted">Olvidé mi contraseña</small>
                     </div>
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary" routerLink="/inicio">Submit</button>
+                        <button type="submit" class="btn btn-primary" routerLink="/inicio">Ingresar</button>
                     </div>
                  </fieldset>
             </form>
