--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -1,22 +1,25 @@
 <div class="container">
     <div class="col-4 mx-auto">
         <div class="card border-primary mb-3 text-center">
-            <form>
+            <form #usuarioForm="ngForm" (ngSubmit)="ingresar(usuarioForm)">
                 <fieldset>
-                    <legend>Iniciar sesión</legend>
+                    <legend></legend>
                     <div class="form-group">
+                        <legend>Iniciar Sesión</legend>
+                        <i class="large material-icons">person</i>
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
                             placeholder="Email">
                         <small id="emailHelp" class="form-text text-muted">Ingrese su email</small>
                     </div>
                     <div class="form-group">
+                        <i class="large material-icons">https</i>
                         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                         <small id="forgotPassword" class="form-text text-muted">Olvidé mi contraseña</small>
                     </div>
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary" routerLink="/inicio">Ingresar</button>
+                        <button class="btn btn-primary"  routerLink="/inicio">Ingresar</button>
                     </div>
-                 </fieldset>
+                </fieldset>
             </form>
         </div>
     </div>
