--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,27 +1,35 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <img class="img" src="https://image.flaticon.com/icons/svg/1499/1499591.svg" alt="W3Schools.com">
+  <img class="img" src="https://image.flaticon.com/icons/svg/1499/1499591.svg" alt="W3Schools.com">
 
-    <div class="collapse navbar-collapse" id="navbarColor01">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="restricciones">Restricciones perimetrales <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="notificaciones">Notificaciones</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="incidencias">Incidencias</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="pruebasDeVida">Pruebas de vida</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="administracion">Administrar</a>
-        </li>
-      </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Buscar">
-        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Buscar</button>
-      </form>
-    </div>
-  </nav>
+  <div class="collapse navbar-collapse" id="navbarColor01">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="restricciones">Restricciones perimetrales <span
+            class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="notificaciones">Notificaciones</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="incidencias">Incidencias</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="pruebasDeVida">Pruebas de vida</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+          aria-expanded="false">Administrar</a>
+        <div class="dropdown-menu" x-placement="bottom-start"
+          style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 38px, 0px);">
+          <a class="dropdown-item" routerLink="administrarUsuarios">Usuarios</a>
+          <a class="dropdown-item" routerLink="administrarPersonas">Personas</a>
+          <a class="dropdown-item" routerLink="administrarRestricciones">Restricciónes perimetrales</a>
+        </div>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+        <a class="dropdown-item" routerLink="../ingresar">Salir</a>
+
+    </form>
+  </div>
+</nav>
