--- a/src/app/components/usuario/usuario.component.html
+++ b/src/app/components/usuario/usuario.component.html
@@ -7,7 +7,7 @@
                     <div class="form-group">
                         <i class="large material-icons">person</i>
                         <input type="text" class="form-control" placeholder="Email"
-                            name="mail" #mail="ngModel"
+                            name="mail" #mail="ngModel" 
                             [(ngModel)]="usuarioService.usuarioSeleccionado.email">
                         <small id="emailHelp" class="form-text text-muted">Ingrese su email</small>
                     </div>
@@ -19,7 +19,7 @@
                         <small id="forgotPassword" class="form-text text-muted">Olvidé mi contraseña</small>
                     </div>
                     <div class="form-group">
-                        <button class="btn btn-primary" routerLink="/inicio">Ingresar</button>
+                        <button class="btn btn-primary">Ingresar</button>
                     </div>
                 </fieldset>
             </form>
