--- a/src/app/components/administrar-personas/administrar-personas.component.html
+++ b/src/app/components/administrar-personas/administrar-personas.component.html
@@ -1,15 +1,10 @@
 <div class="container">
-    <div class="formUsuario">
-        <div class="card bg-light mb-3" style="max-width: 20rem;">
-            <div class="card-body">
-
-            </div>
-            <div class="card-footer">
-                <button class="btn btn-success">Agregar</button>
-            </div>
+    <div class="row">
+        <div class="col-4">
+            <app-form-persona></app-form-persona>
         </div>
-    </div>
-    <div class="listaUsuarios">
-
+        <div class="col">
+            <app-lista-persona></app-lista-persona>
+        </div>
     </div>
 </div>
