--- a/src/app/components/administrar-personas/administrar-personas.component.css
+++ b/src/app/components/administrar-personas/administrar-personas.component.css
@@ -2,3 +2,15 @@
     margin-top: 5%;
     color: #053667;
 }
+
+.row{
+    margin-top: 10px;
+}
+
+.card{
+    text-align: center
+}
+
+.table{
+    color: #053667;
+}
