--- a/src/app/components/administrar-restricciones/administrar-restricciones.component.css
+++ b/src/app/components/administrar-restricciones/administrar-restricciones.component.css
@@ -1,3 +1,16 @@
 .container{
     margin-top: 5%;
+    color: #053667;
+}
+
+.row{
+    margin-top: 10px;
+}
+
+.card{
+    text-align: center
+}
+
+.table{
+    color: #053667;
 }
