--- a/src/app/components/administrar-usuarios/administrar-usuarios.component.html
+++ b/src/app/components/administrar-usuarios/administrar-usuarios.component.html
@@ -11,17 +11,16 @@
                                 [(ngModel)]="usuarioService.usuarioSeleccionado.email">
                         </div>
                         <div class="row">
-                                <div class="form-group btn-block">
-                                <select class="form-control">
-                                    <option>SUPERVISOR</option>
-                                    <option>ADMINISTRATIVO</option>
+                            <div class="form-group btn-block">
+                                <select class="form-control" name="seleccionado" [(ngModel)]="seleccionado" >
+                                    <option *ngFor="let rol of roles">
+                                        {{rol}}
+                                      </option>
                                 </select>
                             </div>
                         </div>
+                        <button class="btn btn-primary btn-block">Agregar</button>
                     </form>
-                </div>
-                <div class="card-footer">
-                    <button class="btn btn-primary btn-block">Agregar</button>
                 </div>
             </div>
         </div>
@@ -43,7 +42,7 @@
                             <a (click)="editarUsuario(usuario)">
                                 <i class="material-icons">editar</i>
                             </a>
-                            <a (click)="eliminarUsuario">
+                            <a (click)="eliminarUsuario(usuario.idUsuario)">
                                 <i class="material-icons">delete</i>
                             </a>
                         </td>
