--- a/src/app/components/administrar-personas/administrar-personas.component.html
+++ b/src/app/components/administrar-personas/administrar-personas.component.html
@@ -8,28 +8,34 @@
                     <form #personaForm="ngForm" (ngSubmit)="agregarPersona(personaForm)">
                         <div class="row">
                             <input class="form-control" type="text" name="nombre" placeholder="Nombre"
-                            #nombre="ngModel" [(ngModel)]="personaDTOSelleccionada.persona.nombre">
+                            #nombre="ngModel" [(ngModel)]="personaDTOSelleccionada.persona.nombre"
+                            ngbTooltip="Nombre">
                         </div>
                         <div class="row">
                             <input class="form-control" type="text" name="apellido" placeholder="Apellido"
-                            #apellido="ngModel" [(ngModel)]="personaDTOSelleccionada.persona.apellido">
+                            #apellido="ngModel" [(ngModel)]="personaDTOSelleccionada.persona.apellido"
+                            ngbTooltip="Apellido">
                         </div>
                         <div class="row">
                             <input class="form-control" type="text" name="DNI" placeholder="DNI"
-                            #DNI="ngModel" [(ngModel)]="personaDTOSelleccionada.persona.DNI">
+                            #DNI="ngModel" [(ngModel)]="personaDTOSelleccionada.persona.DNI"
+                            ngbTooltip="DNI">
                         </div>
                         <div class="row">
                             <input class="form-control" type="text" name="telefono" placeholder="Teléfono"
-                            #telefono="ngModel" [(ngModel)]="personaDTOSelleccionada.persona.telefono">
+                            #telefono="ngModel" [(ngModel)]="personaDTOSelleccionada.persona.telefono"
+                            ngbTooltip="Teléfono">
                         </div>
                         <div class="row">
                             <input class="form-control" type="text" name="email" placeholder="Email"
-                            #email="ngModel" [(ngModel)]="personaDTOSelleccionada.usuario.email">
+                            #email="ngModel" [(ngModel)]="personaDTOSelleccionada.usuario.email"
+                            ngbTooltip="Email">
                         </div>
                         <div class="row">
                             <div class="input-group">
                                 <input class="form-control" placeholder="Fecha nacimiento (Año-Mes-Día)" name="fechaNacimiento"
-                                    [(ngModel)]="personaDTOSelleccionada.persona.fechaNacimiento" ngbDatepicker #d="ngbDatepicker">
+                                    [(ngModel)]="personaDTOSelleccionada.persona.fechaNacimiento" ngbDatepicker #d="ngbDatepicker"
+                                    ngbTooltip="Fecha nacimiento">
                                 <div class="input-group-append">
                                     <button class="btn btn-outline-secondary calendar" (click)="d.toggle()"
                                         type="button">
@@ -40,7 +46,8 @@
                         </div>
                         <div class="row">
                             <div class="form-group btn-block">
-                                <select class="form-control" name="rolSeleccionado" [(ngModel)]="rolSeleccionado">
+                                <select class="form-control" name="rolSeleccionado" [(ngModel)]="rolSeleccionado"
+                                ngbTooltip="Rol de persona">
                                     <option *ngFor="let rol of roles">
                                         {{rol}}
                                       </option>
@@ -50,22 +57,27 @@
                         <label>Dirección</label>
                         <div class="row">
                             <input class="form-control" type="text" name="calle" placeholder="Calle"
-                            #calle="ngModel" [(ngModel)]="personaDTOSelleccionada.direccion.calle">
+                            #calle="ngModel" [(ngModel)]="personaDTOSelleccionada.direccion.calle"
+                            ngbTooltip="Calle">
                         </div>
                         <div class="row">
                             <input class="form-control" type="text" name="altura" placeholder="Altura"
-                            #altura="ngModel" [(ngModel)]="personaDTOSelleccionada.direccion.altura">
+                            #altura="ngModel" [(ngModel)]="personaDTOSelleccionada.direccion.altura"
+                            ngbTooltip="Altura">
                         </div>
                         <div class="row">
                             <input class="form-control" type="text" name="piso" placeholder="Piso"
-                            #piso="ngModel" [(ngModel)]="personaDTOSelleccionada.direccion.piso">
+                            #piso="ngModel" [(ngModel)]="personaDTOSelleccionada.direccion.piso"
+                            ngbTooltip="Piso">
                         </div>
                         <div class="row">
                             <input class="form-control" type="text" name="departamento" placeholder="Departamento"
-                            #departamento="ngModel" [(ngModel)]="personaDTOSelleccionada.direccion.departamento">
+                            #departamento="ngModel" [(ngModel)]="personaDTOSelleccionada.direccion.departamento"
+                            ngbTooltip="Departamento">
                         </div>
                         <div class="row">
-                            <input class="form-control" type="text" name="localidad" placeholder="Localidad">
+                            <input class="form-control" type="text" name="localidad" placeholder="Localidad"
+                            ngbTooltip="Localidad">
                         </div>
                         <div class="row">
                             <button class="btn btn-primary btn-block">Agregar</button>
