Fix alta persona

--- a/src/app/components/administrar-personas/administrar-personas.component.html
+++ b/src/app/components/administrar-personas/administrar-personas.component.html
@@ -18,7 +18,7 @@
                         </div>
                         <div class="row">
                             <input class="form-control" type="text" name="DNI" placeholder="DNI"
-                            #DNI="ngModel" [(ngModel)]="personaDTOSelleccionada.persona.DNI"
+                            #DNI="ngModel" [(ngModel)]="personaDTOSelleccionada.persona.dni"
                             ngbTooltip="DNI">
                         </div>
                         <div class="row">
