form restriccion falta conexion

--- a/src/app/components/usuario/usuario.component.html
+++ b/src/app/components/usuario/usuario.component.html
@@ -8,7 +8,7 @@
                     <div class="form-group">
                         <i class="large material-icons">person</i>
                         <input type="text" class="form-control" placeholder="Email"
-                            name="mail" #mail="ngModel" 
+                            name="mail" #mail="ngModel" autofocus
                             [(ngModel)]="usuarioService.usuarioSeleccionado.email" required email>
                             
                         <small id="emailHelp" class="form-text text-muted">Ingrese su email</small>
