--- a/src/app/components/administrar-restricciones/administrar-restricciones.component.html
+++ b/src/app/components/administrar-restricciones/administrar-restricciones.component.html
@@ -5,13 +5,13 @@
             <div class="card bg-light mb-3" style="max-width: 20rem;">
                 <div class="card-body">
                     <legend>Restricción Perimetral</legend>
-                    <form #personaForm="ngForm">
+                    <form #restriccionForm="ngForm" (ngSubmit)="agregarRestriccion(restriccionForm)">
                         <div class="row">
                             <div class="input-group">
                                 <input class="form-control" type="text" name="dniVictimario"
                                     placeholder="DNI Victimario" ngbTooltip="DNI victimario">
                                 <div class="input-group-append">
-                                    <button class="btn btn-outline-secondary" (click)="agregarVictimario()">
+                                    <button class="btn btn-outline-secondary" type="button" (click)="agregarVictimario()">
                                         <i class="small material-icons">person_add</i>
                                     </button>
                                 </div>
@@ -23,7 +23,7 @@
                                 <input class="form-control" type="text" name="dniDamnificada"
                                     placeholder="DNI Damnificada" ngbTooltip="DNI damnificada">
                                 <div class="input-group-append">
-                                    <button class="btn btn-outline-secondary" (click)="agregarDamnificada()">
+                                    <button class="btn btn-outline-secondary" type="button" (click)="agregarDamnificada()">
                                         <i class="small material-icons">person_add</i>
                                     </button>
                                 </div>
@@ -36,7 +36,7 @@
                                     placeholder="Email Administrativo a cargo"
                                     ngbTooltip="Email administrativo a cargo">
                                 <div class="input-group-append">
-                                    <button class="btn btn-outline-secondary" (click)="agregarAdministrativo()">
+                                    <button class="btn btn-outline-secondary" type="button" (click)="agregarAdministrativo()">
                                         <i class="small material-icons">person_add</i>
                                     </button>
                                 </div>
@@ -45,12 +45,13 @@
                         </div>
                         <div class="row">
                             <input class="form-control" type="number" name="distancia" placeholder="Distancia"
-                                ngbTooltip="Distancia restricción">
+                                ngbTooltip="Distancia restricción" #distancia="ngModel"
+                                [(ngModel)]="restriccion.distancia">
                         </div>
                         <div class="row">
                             <div class="input-group">
                                 <input class="form-control" placeholder="Fecha (Año-Mes-Día)" name="dp"
-                                    [(ngModel)]="model" ngbDatepicker #d="ngbDatepicker"
+                                    [(ngModel)]="restriccion.fechaSentencia" ngbDatepicker #d="ngbDatepicker"
                                     ngbTooltip="Fecha de sentencia">
                                 <div class="input-group-append">
                                     <button class="btn btn-outline-secondary calendar" (click)="d.toggle()"
@@ -61,7 +62,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <button class="btn btn-primary btn-block" (click)="agregarRestriccion()">
+                            <button class="btn btn-primary btn-block">
                                 Agregar</button>
                         </div>
                     </form>
