Corrigo palabras, y URL

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -23,7 +23,7 @@
           style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 38px, 0px);">
           <a class="dropdown-item" routerLink="administrarUsuarios">Usuarios</a>
           <a class="dropdown-item" routerLink="administrarPersonas">Personas</a>
-          <a class="dropdown-item" routerLink="administrarRestricciones">Restricciónes perimetrales</a>
+          <a class="dropdown-item" routerLink="administrarRestricciones">Restricciones perimetrales</a>
         </div>
       </li>
     </ul>
